in_class_ex_07_1

--- a/in_class_ex/in_class_ex07/in_class_ex07.qmd
+++ b/in_class_ex/in_class_ex07/in_class_ex07.qmd
@@ -12,11 +12,11 @@ execute:
   message: false
 ---
 
-Tableau exercise 😀
+# Tableau exercise 😀
 
-https://public.tableau.com/app/profile/zhixuan.chai/viz/in_class_exercise07/Dashboard1?publish=yes
+<https://public.tableau.com/app/profile/zhixuan.chai/viz/in_class_exercise07/Dashboard1?publish=yes>
 
-https://public.tableau.com/app/profile/zhixuan.chai/viz/in_class_ex07_part2/Sheet1?publish=yes
+<https://public.tableau.com/app/profile/zhixuan.chai/viz/in_class_ex07_part2/Sheet1?publish=yes>
 
 ## **Getting started**
 
