in_class_ex_07_3

--- a/in_class_ex/in_class_ex07/in_class_ex07.qmd
+++ b/in_class_ex/in_class_ex07/in_class_ex07.qmd
@@ -34,6 +34,8 @@ averp <- read_csv("data/AVERP.csv") %>%
 ### **Step 2: Plotting the horizon graph**
 
 ```{r}
+#| fig-width: 12
+#| fig-height: 10
 averp %>% 
   filter(Date >= "2018-01-01") %>%
   ggplot() +
