--- a/hands_on_ex/hands_on_ex07/hands_on_ex07.qmd
+++ b/hands_on_ex/hands_on_ex07/hands_on_ex07.qmd
@@ -4,6 +4,12 @@ author: "Chai Zhixuan"
 date: 2024-01-28
 date-format: long
 date-modified: "last-modified"
+execute: 
+  eval: true
+  echo: true
+  freeze: true
+  warning: false
+  message: false
 ---
 
 # **Getting Started**
@@ -55,6 +61,18 @@ popdata <- read_csv("data/aspatial/respopagesextod2011to2020.csv")
 
 #### Data wrangling
 
+The data table should include the variables PA, SZ, YOUNG, ECONOMY ACTIVE, AGED, TOTAL, DEPENDENCY.
+
+-   YOUNG: age group 0 to 4 until age groyup 20 to 24,
+
+-   ECONOMY ACTIVE: age group 25-29 until age group 60-64,
+
+-   AGED: age group 65 and above,
+
+-   TOTAL: all age group, and
+
+-   DEPENDENCY: the ratio between young and aged against economy active group
+
 The following data wrangling and transformation functions will be used:
 
 -   *pivot_wider()* of **tidyr** package, and
@@ -84,12 +102,16 @@ mutate(`DEPENDENCY` = (`YOUNG` + `AGED`)
 
 #### Joining the attribute data and geospatial data
 
+Convert the values in PA and SZ fields to uppercase. This is because the values of PA and SZ fields are made up of upper- and lowercase. On the other, hand the SUBZONE_N and PLN_AREA_N are in uppercase.
+
 ```{r,warning=FALSE}
 popdata2020 <- popdata2020 %>%
   mutate_at(.vars = vars(PA, SZ), 
           .funs = funs(toupper)) %>%
   filter(`ECONOMY ACTIVE` > 0)
 ```
+
+Next, *left_join()* of **dplyr** is used to join the geographical data and attribute table using planning subzone name e.g. *SUBZONE_N* and *SZ* as the common identifier.
 
 ```{r}
 mpsz_pop2020 <- left_join(mpsz, popdata2020,
@@ -103,6 +125,12 @@ write_rds(mpsz_pop2020, "data/rds/mpszpop2020.rds")
 ## **Choropleth Mapping Geospatial Data Using *tmap***
 
 ### **Plotting a choropleth map quickly by using *qtm()***
+
+Two approaches can be used to prepare thematic map using *tmap*, they are:
+
+-   Plotting a thematic map quickly by using *qtm()*.
+
+-   Plotting highly customisable thematic map by using tmap elements.
 
 ```{r}
 tmap_mode("plot")
@@ -148,10 +176,14 @@ tm_shape(mpsz_pop2020)+
 
 #### Drawing a choropleth map using *tm_fill()* and \*tm_border()\*\*
 
+The code chunk below draws a choropleth map by using *tm_fill()* alone.
+
 ```{r}
 tm_shape(mpsz_pop2020)+
   tm_fill("DEPENDENCY")
 ```
+
+To add the boundary of the planning subzones, tm_borders will be used as shown in the code chunk below.
 
 ```{r}
 tm_shape(mpsz_pop2020)+
@@ -161,6 +193,8 @@ tm_shape(mpsz_pop2020)+
 
 ### **Data classification methods of tmap**
 
+The code chunk below shows a quantile data classification that used 5 classes.
+
 ```{r}
 tm_shape(mpsz_pop2020)+
   tm_fill("DEPENDENCY",
@@ -168,6 +202,8 @@ tm_shape(mpsz_pop2020)+
           style = "jenks") +
   tm_borders(alpha = 0.5)
 ```
+
+In the code chunk below, *equal* data classification method is used.
 
 ```{r}
 tm_shape(mpsz_pop2020)+
@@ -177,11 +213,15 @@ tm_shape(mpsz_pop2020)+
   tm_borders(alpha = 0.5)
 ```
 
-#### Plotting choropleth map with custome break
+#### Plotting choropleth map with custom break
+
+it is always a good practice to get some descriptive statistics on the variable before setting the break points. Code chunk below will be used to compute and display the descriptive statistics of **DEPENDENCY** field.
 
 ```{r}
 summary(mpsz_pop2020$DEPENDENCY)
 ```
+
+Now, we will plot the choropleth map by using the code chunk below.
 
 ```{r}
 tm_shape(mpsz_pop2020)+
@@ -196,6 +236,8 @@ tm_shape(mpsz_pop2020)+
 
 #### Using ColourBrewer palette
 
+To change the colour, we assign the preferred colour to *palette* argument of *tm_fill()* as shown in the code chunk below.
+
 ```{r}
 tm_shape(mpsz_pop2020)+
   tm_fill("DEPENDENCY",
@@ -204,6 +246,10 @@ tm_shape(mpsz_pop2020)+
           palette = "Blues") +
   tm_borders(alpha = 0.5)
 ```
+
+Notice that the choropleth map is shaded in green.
+
+To reverse the colour shading, add a \"-\" prefix.
 
 ```{r}
 tm_shape(mpsz_pop2020)+
@@ -216,6 +262,8 @@ tm_shape(mpsz_pop2020)+
 ### **Map Layouts**
 
 #### Map Legend
+
+In **tmap**, several *legend* options are provided to change the placement, format and appearance of the legend.
 
 ```{r}
 tm_shape(mpsz_pop2020)+
@@ -240,6 +288,8 @@ tm_shape(mpsz_pop2020)+
 
 **tmap** allows a wide variety of layout settings to be changed. They can be called by using *tmap_style()*.
 
+The code chunk below shows the *classic* style is used.
+
 ```{r}
 tm_shape(mpsz_pop2020)+
   tm_fill("DEPENDENCY", 
@@ -250,6 +300,8 @@ tm_shape(mpsz_pop2020)+
 ```
 
 #### Cartographic Furniture
+
+In the code chunk below, *tm_compass()*, *tm_scale_bar()* and *tm_grid()* are used to add compass, scale bar and grid lines onto the choropleth map.
 
 ```{r}
 tm_shape(mpsz_pop2020)+
@@ -275,6 +327,8 @@ tm_shape(mpsz_pop2020)+
 
 #### By assigning multiple values to at least one of the aesthetic arguments
 
+In this example, small multiple choropleth maps are created by defining ***ncols*** in **tm_fill()**
+
 ```{r}
 tm_shape(mpsz_pop2020)+
   tm_fill(c("YOUNG", "AGED"),
@@ -285,6 +339,8 @@ tm_shape(mpsz_pop2020)+
   tmap_style("white")
 ```
 
+In this example, small multiple choropleth maps are created by assigning multiple values to at least one of the aesthetic arguments
+
 ```{r}
 tm_shape(mpsz_pop2020)+ 
   tm_polygons(c("DEPENDENCY","AGED"),
@@ -294,6 +350,8 @@ tm_shape(mpsz_pop2020)+
 ```
 
 #### By defining a group-by variable in *tm_facets()*
+
+In this example, multiple small choropleth maps are created by using **tm_facets()**.
 
 ```{r}
 tm_shape(mpsz_pop2020) +
@@ -312,6 +370,8 @@ tm_shape(mpsz_pop2020) +
 
 #### By creating multiple stand-alone maps with *tmap_arrange()*
 
+In this example, multiple small choropleth maps are created by creating multiple stand-alone maps with **tmap_arrange()**.
+
 ```{r}
 youngmap <- tm_shape(mpsz_pop2020)+ 
   tm_polygons("YOUNG", 
@@ -327,6 +387,8 @@ tmap_arrange(youngmap, agedmap, asp=1, ncol=2)
 ```
 
 ### **Mappping Spatial Object Meeting a Selection Criterion**
+
+I can use selection funtion to map spatial objects meeting the selection criterion.
 
 ```{r}
 tm_shape(mpsz_pop2020[mpsz_pop2020$REGION_N=="CENTRAL REGION", ])+
@@ -364,6 +426,8 @@ list(sgpools)
 
 ### **Creating a sf data frame from an aspatial data frame**
 
+The code chunk below converts sgpools data frame into a simple feature data frame by using *st_as_sf()* of **sf** packages
+
 ```{r}
 sgpools_sf <- st_as_sf(sgpools, 
                        coords = c("XCOORD", "YCOORD"),
@@ -376,11 +440,15 @@ list(sgpools_sf)
 
 ### **Drawing Proportional Symbol Map**
 
+The code churn below will turn on the interactive mode of tmap.
+
 ```{r}
 tmap_mode("view")
 ```
 
 ### **It all started with an interactive point symbol map**
+
+The code chunks below are used to create an interactive point symbol map.
 
 ```{r}
 tm_shape(sgpools_sf)+
@@ -392,6 +460,8 @@ tm_bubbles(col = "red",
 
 ### **Lets make it proportional**
 
+To draw a proportional symbol map, we need to assign a numerical variable to the size visual attribute. The code chunks below show that the variable *Gp1Gp2Winnings* is assigned to size visual attribute.
+
 ```{r}
 tm_shape(sgpools_sf)+
 tm_bubbles(col = "red",
@@ -402,6 +472,8 @@ tm_bubbles(col = "red",
 
 ### **Lets give it a different colour**
 
+The proportional symbol map can be further improved by using the colour visual attribute. In the code chunks below, *OUTLET_TYPE* variable is used as the colour attribute variable.
+
 ```{r}
 tm_shape(sgpools_sf)+
 tm_bubbles(col = "OUTLET TYPE", 
@@ -411,6 +483,8 @@ tm_bubbles(col = "OUTLET TYPE",
 ```
 
 ### **I have a twin brothers :)**
+
+An impressive and little-know feature of **tmap**\'s view mode is that it also works with faceted plots. The argument *sync* in *tm_facets()* can be used in this case to produce multiple maps with synchronised zoom and pan settings.
 
 ```{r}
 tm_shape(sgpools_sf) +
@@ -473,6 +547,8 @@ tmap_arrange(p2, p1, nrow = 1)
 
 ### **Deriving Proportion of Functional Water Points and Non-Functional Water Points**
 
+We will tabulate the proportion of functional water points and the proportion of non-functional water points in each LGA. In the following code chunk, `mutate(`) from **dplyr** package is used to derive two fields, namely *pct_functional* and *pct_nonfunctional*.
+
 ```{r}
 NGA_wp <- NGA_wp %>%
   mutate(pct_functional = wp_functional/total_wp) %>%
@@ -498,12 +574,18 @@ tm_shape(NGA_wp) +
 
 ### **Percentile Map**
 
+The percentile map is a special type of quantile map with six specific categories: 0-1%,1-10%, 10-50%,50-90%,90-99%, and 99-100%. The corresponding breakpoints can be derived by means of the base R quantile command, passing an explicit vector of cumulative probabilities as c(0,.01,.1,.5,.9,.99,1). Note that the begin and endpoint need to be included.
+
 #### Data Preparation
+
+Step 1: Exclude records with NA by using the code chunk below.
 
 ```{r}
 NGA_wp <- NGA_wp %>%
   drop_na()
 ```
+
+Step 2: Creating customised classification and extracting values
 
 ```{r}
 percent <- c(0,.01,.1,.5,.9,.99,1)
@@ -524,6 +606,8 @@ get.var <- function(vname,df) {
 ```
 
 #### A percentile mapping function
+
+Next, we will write a percentile mapping function by using the code chunk below.
 
 ```{r}
 percentmap <- function(vnam, df, legtitle=NA, mtitle="Percentile Map"){
@@ -546,6 +630,8 @@ percentmap <- function(vnam, df, legtitle=NA, mtitle="Percentile Map"){
 
 #### Test drive the percentile mapping function
 
+To run the function, type the code chunk as shown below.
+
 ```{r}
 percentmap("total_wp", NGA_wp)
 ```
@@ -559,7 +645,25 @@ ggplot(data = NGA_wp,
   geom_boxplot()
 ```
 
+::: callout-note
+-   Displaying summary statistics on a choropleth map by using the basic principles of boxplot.
+
+-   To create a box map, a custom breaks specification will be used. However, there is a complication. The break points for the box map vary depending on whether lower or upper outliers are present.
+:::
+
 #### Creating the boxbreaks function
+
+The code chunk below is an R function that creating break points for a box map.
+
+-   arguments:
+
+    -   v: vector with observations
+
+    -   mult: multiplier for IQR (default 1.5)
+
+-   returns:
+
+    -   bb: vector with 7 break points compute quartile and fences
 
 ```{r}
 boxbreaks <- function(v,mult=1.5) {
@@ -591,6 +695,18 @@ boxbreaks <- function(v,mult=1.5) {
 
 #### Creating the get.var function
 
+The code chunk below is an R function to extract a variable as a vector out of an sf data frame.
+
+-   arguments:
+
+    -   vname: variable name (as character, in quotes)
+
+    -   df: name of sf data frame
+
+-   returns:
+
+    -   v: vector with values (without a column name)
+
 ```{r}
 get.var <- function(vname,df) {
   v <- df[vname] %>% st_set_geometry(NULL)
@@ -601,12 +717,16 @@ get.var <- function(vname,df) {
 
 #### Test drive the newly created function
 
+Let\'s test the newly created function
+
 ```{r}
 var <- get.var("wp_nonfunctional", NGA_wp) 
 boxbreaks(var)
 ```
 
 #### Boxmap function
+
+The code chunk below is an R function to create a box map. - arguments: - vnam: variable name (as character, in quotes) - df: simple features polygon layer - legtitle: legend title - mtitle: map title - mult: multiplier for IQR - returns: - a tmap-element (plots a map)
 
 ```{r}
 boxmap <- function(vnam, df, 
