take_home_ex04_commit_07

--- a/take_home_ex/take_home_ex04/take_home_ex04.qmd
+++ b/take_home_ex/take_home_ex04/take_home_ex04.qmd
@@ -385,3 +385,7 @@ It should be linked with the other tabs of the different modules.
 Below is the mockup of the storyboard:
 
 ![](images/3.PNG)
+
+Detailed information is as shown below:
+
+![](images/1-08.PNG)
